<resources>
    <string name="app_name">NUMAD22Fa_HaozheZhang</string>
    <string name="about_me">About Me!</string>
    <string name="hello_world">Hello World!</string>
    <string name="clicky_clicky_btn">Clicky Clicky</string>
    <string name="ButtonA">A</string>
    <string name="button">B</string>
    <string name="ButtonB">B</string>
    <string name="ButtonF">F</string>
    <string name="ButtonD">D</string>
    <string name="ButtonE">E</string>
    <string name="ButtonC">C</string>
    <string name="pressed">Pressed:</string>
    <string name="press">Pressed:-</string>
    <string name="link_collector">Link Collector</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="SuccessAddUrl">Url is added successfully</string>
    <string name="FailAddUrl">Url is not valid, check your input</string>
    <string name="url_info">url information</string>
    <string name="enter_url_detail">URL Detail</string>
    <string name="web_name">Web name:</string>
    <string name="url_address_display">Url:</string>
    <string name="HTTP">https://</string>
    <string name="find_prime">Find Primes</string>
    <string name="prime_display">Primes</string>
    <string name="location_confirmed">Location</string>
    <string name="find_primes">Find Primes</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="pacifier_switch">Pacifier Switch</string>
    <string name="terminate_search_dialog_display">Terminate Search Now?</string>
    <string name="status_check_btn">Status Check</string>
    <string name="status_check_display">click left to check</string>
    <string name="is_prime_display">Is Prime?</string>
    <string name="current_prime_number_check_display">Current number being checked: %1$s</string>
    <string name="dialog_go_back">Do you want to go back while app is running?</string>
    <string name="lat_display">"Latitude: "</string>
    <string name="long_display">"Longitude: "</string>
    <string name="distance_travelled_display">"Distance: "</string>
    <string name="reset_distance">"Reset"</string>
    <string name="btn_current_location">"Get Location"</string>
    <string name="gps_updates">GPS updates</string>

</resources>