<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LocationConfirmed">


    <TextView
        android:id="@+id/latitude_display"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/lat_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/longitude_display"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/long_display"
        app:layout_constraintEnd_toEndOf="@+id/latitude_display"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/latitude_display"
        app:layout_constraintTop_toBottomOf="@+id/latitude_display" />

    <Switch
        android:id="@+id/location_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/gps_updates"
        app:layout_constraintEnd_toEndOf="@+id/longitude_display"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/longitude_display"
        app:layout_constraintTop_toBottomOf="@+id/longitude_display" />

    <Button
        android:id="@+id/btn_reset_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_distance"
        android:onClick="resetClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/longitude_display"
        app:layout_constraintTop_toBottomOf="@+id/location_updates" />

    <TextView
        android:id="@+id/distance_travelled_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_travelled_display"
        app:layout_constraintBottom_toBottomOf="@+id/btn_reset_distance"
        app:layout_constraintStart_toEndOf="@+id/btn_reset_distance"
        app:layout_constraintTop_toTopOf="@+id/btn_reset_distance"
       android:layout_marginStart="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>