<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/url_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:text="@string/enter_url_detail"
        app:layout_constraintBottom_toTopOf="@+id/web_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/web_name"
        android:layout_width="0dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/web_name"
        app:layout_constraintBottom_toTopOf="@id/url_address_display"
        app:layout_constraintEnd_toStartOf="@+id/url_name_input"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/url_info"
         />

    <EditText
        android:id="@+id/url_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:inputType="text"
        android:nextFocusDown="@id/url_address_display"
        app:layout_constraintBottom_toTopOf="@id/url_address_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/web_name"
        app:layout_constraintTop_toBottomOf="@id/url_info" />

    <TextView
        android:id="@+id/url_address_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:text="@string/url_address_display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/url_address_input"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/web_name" />

    <EditText
        android:id="@+id/url_address_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textUri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@id/url_address_display"
        app:layout_constraintTop_toBottomOf="@id/url_name_input"
         />

</androidx.constraintlayout.widget.ConstraintLayout>